<resources>
    <string name="app_name">Rest2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="strListarProspecto">Listar Prospecto</string>
    <string name="strDoasboard">Doasboard</string>
    <string name="strCerrarSesion">Cerrar Sesión</string>
    <string name="strPruebaTecnica">Prueba tecnica</string>
    <string name="strDesarrolladorEmail">alveiro09@hotmail.com</string>
    <string name="strListaProspectos">Lista de prospectos</string>
    <string name="strBtnLog">LOG</string>
    <string name="strBtnEditar">Editar</string>
    <string name="lblNombre">Nombre</string>
    <string name="lblApellido">Apellido</string>
    <string name="lblCedula">Cedula</string>
    <string name="lblTelefono">Telefono</string>

</resources>
